<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{b89a8cd2-f0c0-47df-947e-1dd81346c02a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	updateFileList: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>